fix(rcac): Increase contrast for info banners

--- a/app/Themes/Rcac/assets/css/content.css
+++ b/app/Themes/Rcac/assets/css/content.css
@@ -98,8 +98,8 @@ figcaption {
 	color: #7C4A03;
 }
 .notice-banner .alert-info {
-	background-color: #20809D;
-	color: #D7F4F4;
+	background-color: #1D7590;
+	color: #DFF6F6;
 }
 .notice-banner .alert-info a,
 .notice-banner .alert-info a:link {
